--- a/src/app/member/member.component.html
+++ b/src/app/member/member.component.html
@@ -1,4 +1,50 @@
-<p>member works!</p>
+<div fxLayout="row" fxLayoutAlign="end center" >
 
-{{nom}} 
-je suis dans member
+
+<button>Create New</button>
+</div>
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+    
+    <ng-container matColumnDef="1">
+      <th mat-header-cell *matHeaderCellDef> id </th>
+      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="2">
+      <th mat-header-cell *matHeaderCellDef> cin </th>
+      <td mat-cell *matCellDef="let element"> {{element.cin}} </td>
+    </ng-container>
+  
+    <ng-container matColumnDef="3">
+      <th mat-header-cell *matHeaderCellDef> name </th>
+      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="4">
+      <th mat-header-cell *matHeaderCellDef> cv </th>
+      <td mat-cell *matCellDef="let element"> <a href="{{element.cv}}"> <mat-icon >picture_as_pdf</mat-icon></a></td>
+    </ng-container>
+    <ng-container matColumnDef="5">
+        <th mat-header-cell *matHeaderCellDef> type </th>
+        <td mat-cell *matCellDef="let element"> {{element.type}} </td>
+      </ng-container>
+      <ng-container matColumnDef="6">
+        <th mat-header-cell *matHeaderCellDef> createdDate </th>
+        <td mat-cell *matCellDef="let element"> {{element.createdDate}} </td>
+      </ng-container>
+  
+      <ng-container matColumnDef="7">
+        <th mat-header-cell *matHeaderCellDef>  </th>
+        <td mat-cell *matCellDef="let element"> 
+        <mat-icon >edit</mat-icon>
+        <mat-icon >delete</mat-icon>
+
+
+        </td>
+      </ng-container>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+  
+  
